fix(todo-config): populate structured journey steps